--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/estudiantes
+spring.datasource.url=jdbc:mysql://localhost:3306/programacion
 spring.datasource.username=root
-spring.datasource.password=P455w0rd!
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database = MYSQL
 
